Reviewed by Kevin Ollivier.

[wx] Fix handling of alpha channel when using wxWidgets 2.9: it was
simply ignored before resulting in transparent areas being black in PNG
images for example.

https://bugs.webkit.org/show_bug.cgi?id=30823


Canonical link: https://commits.webkit.org/42107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50677 268f45cc-cd09-0410-ab3c-d52691b4dbfc